--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Marketplace</string>
     <string name="button_addItem">Add Item</string>
     <string name="hint_itemTitle">Item Title</string>
+    <string name="hint_itemDescription">Description </string>
 </resources>
