--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="menu_removeItem">Remove</string>
     <string name="menu_cancelItem">Cancel</string>
     <string name="enter_item_title"> Please enter an Item Title </string>
+    <string name="save_item"> Save Item </string>
+    <string name="button_addImage"> Add Image </string>
 </resources>
