--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="enter_item_title"> Please enter an Item Title </string>
     <string name="save_item"> Save Item </string>
     <string name="button_addImage"> Add Image </string>
+    <string name="select_item_image">Select item image</string>
 </resources>
