--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="save_item"> Save Item </string>
     <string name="button_addImage"> Add Image </string>
     <string name="select_item_image">Select item image</string>
+    <string name="change_item_image">Change item image</string>
 </resources>
