--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="button_addImage"> Add Image </string>
     <string name="select_item_image">Select item image</string>
     <string name="change_item_image">Change item image</string>
+    <string name="button_location">Set Location</string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
