--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,14 @@
     <string name="change_item_image">Change item image</string>
     <string name="button_location">Set Location</string>
     <string name="title_activity_maps">MapsActivity</string>
+    <string name="sign_in">sign_in</string>
+    <string name="email">email</string>
+    <string name="password">password</string>
+    <string name="login">login</string>
+    <string name="new_account">new_account</string>
+    <string name="click_here">click_here</string>
+    <string name="sign_up">sign_up</string>
+    <string name="confirmpass">confirmpass</string>
+    <string name="signup">signup</string>
+    <string name="already_have_an_account">already_have_an_account</string>
 </resources>
