update UI theme

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,14 +13,15 @@
     <string name="change_item_image">Change item image</string>
     <string name="button_location">Set Location</string>
     <string name="title_activity_maps">MapsActivity</string>
-    <string name="sign_in">sign_in</string>
+    <string name="sign_in">Marketplace - Login page</string>
     <string name="email">email</string>
     <string name="password">password</string>
-    <string name="login">login</string>
+    <string name="login">LOGIN</string>
     <string name="new_account">Are you new to Marketplace?</string>
     <string name="click_here">Sign up here!</string>
     <string name="sign_up">sign_up</string>
     <string name="confirmpass">confirm password</string>
     <string name="signup">signup</string>
     <string name="already_have_an_account">Do you already have an account?</string>
+    <string name="hint_itemPrice">0.00 EUR</string>
 </resources>
